@@ -6,6 +6,7 @@
 	* Kobolds vs elves grudge
 	* Far look during hallucination should be more amusing
 	* Assorted YAFMs 1.0 by Adam Borowski ( http://bilious.alt.org/?121 ), slightly modified
+	* Cursed musical instruments will work only in 50% of cases, blessed ones are more effective
 
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
